--- a/fadvetcaes.html
+++ b/fadvetcaes.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAD-Vet|Cães</title>
+    <title>FAD-Vet | Cães</title>
     <link rel="shortcut icon" href="./src/imagens/icone-site.png" type="image/icone-site">
     <link rel="stylesheet" href="./src/css/reset.css">
-    <link rel="stylesheet" href="./src/css/estilos.css">
+    <link rel="stylesheet" href="./src/css/estilosfadvet.css">
 </head>
+
 <body>
-    <header></header>
-    <main></main>
+    <header class="cabecalho">
+        <div class="logo">
+            <a href="index.html">
+                <img class="logo-do-site" src="./src/imagens/logo-sem-fundo.png" alt="Logo do site">
+                <hr>
+                <img class=logo-escrita src="./src/imagens/logo-melhorada-sem-fundo.png" alt="logo escrita">
+            </a>
+        </div>
+    </header>
+    <main>
+        <input id="searchbar" type="text" name="searchbar" placeholder="Sintomas, achados laboratoriais, achados clínicos..." onkeyup="search()">
+        <ul id="lista-de-resultados">
+            <li class="sinais">vômito</li>
+            <li class="sinais">diarréia</li>
+            <li class="sinais">febre</li>
+            <li class="sinais">cialorréia</li>
+            <li class="sinais">ataxia</li>
+        </ul>
+        <div class="texto-fad-vet">
+            <h1>Ferramenta Auxiliar de Diagnóstico Veterinário | FAD-Vet</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi alias incidunt harum nostrum ab ea
+                quibusdam delectus nam molestiae! Aperiam aspernatur consectetur voluptas, quisquam aut tenetur
+                perferendis mollitia placeat unde.</p>
+        </div>
+    </main>
     <section></section>
+    <script src="./src/js/fadvet.js"></script>
 </body>
+
 </html>
