--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
                     <img class="img-secoes" src="./src/imagens/icone-cao (1).jpeg" alt="Seção de cães"> 
                     <ul class="plataformas-caes">
                         <li>
-                            <a href="fadvetcaes.html">FAD-Vet</a>
+                            <a href="fadvetcaes.html">
+                                <p>FAD-Vet</p>
+                            </a>
                         </li>
                         <li>
                             <p>Guia de doenças</p>
