--- a/fadvetcaes.html
+++ b/fadvetcaes.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAD-Vet | Cães</title>
     <link rel="shortcut icon" href="./src/imagens/icone-site.png" type="image/icone-site">
+    <link href="https://fonts.cdnfonts.com/css/open-sans" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/estilosfadvet.css">
+    <link rel="stylesheet" href="src/css/fontes.css">
 </head>
 
 <body>
@@ -21,7 +23,8 @@
         </div>
     </header>
     <main>
-        <input id="searchbar" type="text" name="searchbar" placeholder="Sintomas, achados laboratoriais, achados clínicos..." onkeyup="search()">
+        <input id="searchbar" type="text" name="searchbar"
+            placeholder="Sintomas, achados laboratoriais, achados clínicos..." onkeyup="search()">
         <ul id="lista-de-resultados">
             <li class="sinais">vômito</li>
             <li class="sinais">diarréia</li>
