--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto TCC</title>
     <link rel="shortcut icon" href="./src/imagens/icone-site.png" type="image/x-icon">
-    <link href="https://fonts.cdnfonts.com/css/chalet" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/open-sans" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/estilos.css">
     <link rel="stylesheet" href="src/css/fontes.css">
